--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,8 @@ body {
   margin: auto;
   margin-top: 50px;
   margin-bottom: -100px;
+  z-index: 6;
+  background-color: var(--backgroundColor);
 }
 
 .techstack h2 {
